Added vegetable list to webpage

--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Fruits List</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>List of Fruits</h1>
-    <table border="1">
-        <tr><th>Name</th><th>Quantity</th><th>Price</th><th>Photo</th></tr>
-        <tr>
-            <td>Apple</td>
-            <td>10 Kg</td>
-            <td>₹120/kg</td>
-            <td><img src="images/apple.jpg" width="80"></td>
-        </tr>
-        <tr>
-            <td>Banana</td>
-            <td>12 Dozen</td>
-            <td>₹40/dozen</td>
-            <td><img src="images/banana.jpg" width="80"></td>
-        </tr>
-    </table>
-</body>
-</html>
+<h1>List of Vegetables</h1>
+<table border="1">
+    <tr><th>Name</th><th>Quantity</th><th>Price</th><th>Photo</th></tr>
+    <tr>
+        <td>Tomato</td>
+        <td>15 Kg</td>
+        <td>₹30/kg</td>
+        <td><img src="images/tomato.jpg" width="80"></td>
+    </tr>
+    <tr>
+        <td>Potato</td>
+        <td>20 Kg</td>
+        <td>₹25/kg</td>
+        <td><img src="images/potato.jpg" width="80"></td>
+    </tr>
+</table>
