Added fiction books section

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<h1>List of Vegetables</h1>
+<h2>Fiction Books</h2>
 <table border="1">
-    <tr><th>Name</th><th>Quantity</th><th>Price</th><th>Photo</th></tr>
+    <tr><th>Title</th><th>Quantity</th><th>Price</th><th>Photo</th></tr>
     <tr>
-        <td>Tomato</td>
-        <td>15 Kg</td>
-        <td>₹30/kg</td>
-        <td><img src="images/tomato.jpg" width="80"></td>
+        <td>Harry Potter</td>
+        <td>8</td>
+        <td>$20</td>
+        <td><img src="images/harrypotter.jpg" width="80"></td>
     </tr>
     <tr>
-        <td>Potato</td>
-        <td>20 Kg</td>
-        <td>₹25/kg</td>
-        <td><img src="images/potato.jpg" width="80"></td>
+        <td>Lord of the Rings</td>
+        <td>3</td>
+        <td>$25</td>
+        <td><img src="images/lotr.jpg" width="80"></td>
     </tr>
 </table>
